--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "author": "nttruong21",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.5",
         "express-session": "^1.17.2",
         "mongoose": "^6.3.2",
         "multer": "^1.4.4",
+        "multiparty": "^4.2.3",
         "socket.io": "^4.5.0"
     },
     "devDependencies": {
