Change database connection string

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_CONNECTION_STRING=mongodb+srv://admin:10101@cluster0.jzuia.mongodb.net/chat_app
+DB_CONNECTION_STRING=mongodb+srv://admin:admin@cluster0.jzuia.mongodb.net/chat_app
